[package]
name = "rustsharex"
version = "0.1.0"
authors = ["Loron gröbner <groebner.loron@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
rocket-multipart-form-data = "0.9.5"
serde_json = "1.0.58"